[package]
name = "blas-src"
version = "0.2.1"
license = "Apache-2.0/MIT"
authors = [
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Toshiki Teramura <toshiki.teramura@gmail.com>",
]
description = "The package provides a BLAS source of choice."
documentation = "https://docs.rs/blas-src"
homepage = "https://github.com/blas-lapack-rs/blas-src"
repository = "https://github.com/blas-lapack-rs/blas-src"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]

[features]
accelerate = ["accelerate-src"]
intel-mkl = ["intel-mkl-src"]
netlib = ["netlib-src"]
openblas = ["openblas-src"]

[dependencies.accelerate-src]
version = "0.3"
optional = true

[dependencies.intel-mkl-src]
version = "0.2"
optional = true

[dependencies.netlib-src]
version = "0.7"
optional = true

[dependencies.openblas-src]
git = "https://github.com/maciejkula/openblas-src"
rev = "655e1bbeaad05d4bc83bf8a52c04805643a33671"
optional = true
